@@ -42,6 +42,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Iterator
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
 import|;
 end_import
@@ -105,6 +115,38 @@ operator|.
 name|params
 operator|.
 name|ModifiableSolrParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
+name|SolrParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
+name|SpellingParams
 import|;
 end_import
 
@@ -461,20 +503,149 @@ block|{
 name|tryNo
 operator|++
 expr_stmt|;
-name|ModifiableSolrParams
-name|params
+name|SolrParams
+name|origParams
 init|=
-operator|new
-name|ModifiableSolrParams
-argument_list|(
 name|ultimateResponse
 operator|.
 name|req
 operator|.
 name|getParams
 argument_list|()
+decl_stmt|;
+name|ModifiableSolrParams
+name|params
+init|=
+operator|new
+name|ModifiableSolrParams
+argument_list|(
+name|origParams
 argument_list|)
 decl_stmt|;
+name|Iterator
+argument_list|<
+name|String
+argument_list|>
+name|origParamIterator
+init|=
+name|origParams
+operator|.
+name|getParameterNamesIterator
+argument_list|()
+decl_stmt|;
+name|int
+name|pl
+init|=
+name|SpellingParams
+operator|.
+name|SPELLCHECK_COLLATE_PARAM_OVERRIDE
+operator|.
+name|length
+argument_list|()
+decl_stmt|;
+while|while
+condition|(
+name|origParamIterator
+operator|.
+name|hasNext
+argument_list|()
+condition|)
+block|{
+name|String
+name|origParamName
+init|=
+name|origParamIterator
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|origParamName
+operator|.
+name|startsWith
+argument_list|(
+name|SpellingParams
+operator|.
+name|SPELLCHECK_COLLATE_PARAM_OVERRIDE
+argument_list|)
+operator|&&
+name|origParamName
+operator|.
+name|length
+argument_list|()
+operator|>
+name|pl
+condition|)
+block|{
+name|String
+index|[]
+name|val
+init|=
+name|origParams
+operator|.
+name|getParams
+argument_list|(
+name|origParamName
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|val
+operator|.
+name|length
+operator|==
+literal|1
+operator|&&
+name|val
+index|[
+literal|0
+index|]
+operator|.
+name|length
+argument_list|()
+operator|==
+literal|0
+condition|)
+block|{
+name|params
+operator|.
+name|set
+argument_list|(
+name|origParamName
+operator|.
+name|substring
+argument_list|(
+name|pl
+argument_list|)
+argument_list|,
+operator|(
+name|String
+index|[]
+operator|)
+literal|null
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|params
+operator|.
+name|set
+argument_list|(
+name|origParamName
+operator|.
+name|substring
+argument_list|(
+name|pl
+argument_list|)
+argument_list|,
+name|val
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
 name|params
 operator|.
 name|set
